--- a/design-miguel-shaquielle.html
+++ b/design-miguel-shaquielle.html
@@ -1,43 +1,75 @@
 <!doctype html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Visual Design</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Your custom css styles go here -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/design.css">
-</head>
-<body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Visual Design</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- Your custom css styles go here -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/design.css">
+    </head>
+    <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="../images/logo.png" alt="" width="50" height="50">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled">Disabled</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/logo.png" alt="" width="50" height="50">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <p class="codeup-nav">codeup design</p>
+                        <a class="nav-link" href="#">SERVICES</a>
+                        <a class="nav-link" href="#">WORK</a>
+                        <a class="nav-link" href="#">BLOG</a>
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <div class="heading">
+            <div class="row">
+                <div class="col">
+                    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h2>FROM PARK CITY, UTAH</h2>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+        <div class="buttons">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 col-6" align="center">
+                    <p class="m-0 design">DESIGN</p>
+                </div>
+                <div class="col-md-3 col-sm-6 col-6" align="center">
+                    <p class="m-0 develop">DEVELOP</p>
+                </div>
+                <div class="col-md-3 col-sm-6 col-6"  align="center">
+                    <p class="m-0 support">SUPPORT</p>
+                </div>
+                <div class="col-md-3 col-sm-6 col-6" align="center">
+                    <p class="m-0 host">HOST</p>
+                </div>
+            </div>
+        </div>
+        <div class="selected-work">
 
-<h1>VISUAL, DESIGN & WEB DEVELOPMENT</h1>
+        </div>
 
-<h2>FROM PARK CITY, UTAH</h2>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<!-- Your custom JS goes here -->
-</body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!-- Your custom JS goes here -->
+    </body>
 </html>
