adding feature project buttons

--- a/design-miguel-shaquielle.html
+++ b/design-miguel-shaquielle.html
@@ -71,32 +71,46 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8">
-            SELECTED WORK
+            <h4>SELECTED WORK</h4>
             <div class="row">
                 <div class="col-lg-6">
                     <img src="images/apple-ipad.jpg">
                     <div class="row">
                         <div class="col-lg-8">
-                            FEATURED PROJECT
+                            <h4>FEATURED PROJECT</h4>
                         </div>
                         <div class="col-lg-1">
-
+                            <h5>D</h5>
                         </div>
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-1"></div>
+                        <div class="col-lg-1">
+                            <h5>D</h5>
+                        </div>
+                        <div class="col-lg-1">
+                            <h5>S</h5>
+                        </div>
+                        <div class="col-lg-1">
+                            <h5>H</h5>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/macbook.jpg">
                     <div class="row">
                         <div class="col-lg-8">
-                            FEATURED PROJECT
+                           <h4>FEATURED PROJECT</h4>
                         </div>
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-1"></div>
-                        <div class="col-lg-1"></div>
+                        <div class="col-lg-1">
+                            <h5>D</h5>
+                        </div>
+                        <div class="col-lg-1">
+                            <h5>D</h5>
+                        </div>
+                        <div class="col-lg-1">
+                            <h5>S</h5>
+                        </div>
+                        <div class="col-lg-1">
+                            <h5>H</h5>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
@@ -104,24 +118,40 @@
                         <img src="images/man.jpg">
                         <div class="row">
                             <div class="col-lg-8">
-                                FEATURED PROJECT
+                                <h4>FEATURED PROJECT</h4>
                             </div>
-                            <div class="col-lg-1"></div>
-                            <div class="col-lg-1"></div>
-                            <div class="col-lg-1"></div>
-                            <div class="col-lg-1"></div>
+                            <div class="col-lg-1">
+                                <h5>D</h5>
+                            </div>
+                            <div class="col-lg-1">
+                                <h5>D</h5>
+                            </div>
+                            <div class="col-lg-1">
+                                <h5>S</h5>
+                            </div>
+                            <div class="col-lg-1">
+                                <h5>H</h5>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <img src="images/security.jpg">
                         <div class="row">
                             <div class="col-lg-8">
-                                FEATURED PROJECT
+                                <h4>FEATURED PROJECT</h4>
                             </div>
-                            <div class="col-lg-1"></div>
-                            <div class="col-lg-1"></div>
-                            <div class="col-lg-1"></div>
-                            <div class="col-lg-1"></div>
+                            <div class="col-lg-1">
+                                <h5>D</h5>
+                            </div>
+                            <div class="col-lg-1">
+                                <h5>D</h5>
+                            </div>
+                            <div class="col-lg-1">
+                                <h5>S</h5>
+                            </div>
+                            <div class="col-lg-1">
+                                <h5>D</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -129,13 +159,13 @@
         </div>
 
         <div class="col-lg-4">
-            THE LAST
+            <h4>THE LAST</h4>
             <div class="row">
                 <div class="col-lg-3">
                     <img src="images/mobile-phone.jpg">
                 </div>
                 <div class="col-lg-9">
-
+                    <h3>THE ADMIN BAR AND ABSOLUTE POSITIONING</h3>
                 </div>
             </div>
             <div class="row">
@@ -143,7 +173,7 @@
                     <img src="images/head.jpg">
                 </div>
                 <div class="col-lg-9">
-
+                    <h3>NIBBLER AWESOME WEBSITE TESTING</h3>
                 </div>
             </div>
             <div class="row">
@@ -151,17 +181,17 @@
                     <img src="images/google-search.jpg">
                 </div>
                 <div class="col-lg-9">
-
+                    <h3>HOW TO GET GOOGLE TO LIKE YOU</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-
+                    <h4>LAST TWEET</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
             </div>
         </div>
