--- a/design-miguel-shaquielle.html
+++ b/design-miguel-shaquielle.html
@@ -76,85 +76,85 @@
                 <div class="col-lg-6">
                     <img src="images/apple-ipad.jpg">
                     <div class="row">
-                        <div class="col-lg-8">
+                        <div class="col-lg-8 col-8">
                             <h4>FEATURED PROJECT</h4>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>D</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="d">D</h5>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>D</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="d2">D</h5>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>S</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="s">S</h5>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>H</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="h">H</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <img src="images/macbook.jpg">
                     <div class="row">
-                        <div class="col-lg-8">
+                        <div class="col-lg-8 col-8">
                            <h4>FEATURED PROJECT</h4>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>D</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="d">D</h5>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>D</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="d2">D</h5>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>S</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="s">S</h5>
                         </div>
-                        <div class="col-lg-1">
-                            <h5>H</h5>
+                        <div class="col-lg-1 col-1">
+                            <h5 class="h">H</h5>
                         </div>
                     </div>
                 </div>
-                <div class="row">
+<!--                <div class="row">-->
                     <div class="col-lg-6">
                         <img src="images/man.jpg">
                         <div class="row">
-                            <div class="col-lg-8">
+                            <div class="col-lg-8 col-8">
                                 <h4>FEATURED PROJECT</h4>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>D</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="d">D</h5>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>D</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="d2">D</h5>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>S</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="s">S</h5>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>H</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="h">H</h5>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <img src="images/security.jpg">
                         <div class="row">
-                            <div class="col-lg-8">
+                            <div class="col-lg-8 col-8">
                                 <h4>FEATURED PROJECT</h4>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>D</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="d">D</h5>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>D</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="d2">D</h5>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>S</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="s">S</h5>
                             </div>
-                            <div class="col-lg-1">
-                                <h5>D</h5>
+                            <div class="col-lg-1 col-1">
+                                <h5 class="h">D</h5>
                             </div>
                         </div>
                     </div>
-                </div>
+<!--                </div>-->
             </div>
         </div>
 
