corrected errors in code

--- a/design-miguel-shaquielle.html
+++ b/design-miguel-shaquielle.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="eng">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
@@ -21,7 +21,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="../images/logo.png" alt="" width="50" height="50">
+            <img src="images/logo.png" alt="" width="50" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
             <h4>SELECTED WORK</h4>
             <div class="row">
                 <div class="col-lg-6">
-                    <img src="images/apple-ipad.jpg">
+                    <img src="images/apple-ipad.jpg" alt="photo of ipads">
                     <div class="row">
                         <div class="col-lg-8 col-8">
                             <h4>FEATURED PROJECT</h4>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="images/macbook.jpg">
+                    <img src="images/macbook.jpg" alt="photo of macbooks">
                     <div class="row">
                         <div class="col-lg-8 col-8">
                            <h4>FEATURED PROJECT</h4>
@@ -115,7 +115,7 @@
                 </div>
 <!--                <div class="row">-->
                     <div class="col-lg-6">
-                        <img src="images/man.jpg">
+                        <img src="images/man.jpg" alt="photo of man with glasses">
                         <div class="row">
                             <div class="col-lg-8 col-8">
                                 <h4>FEATURED PROJECT</h4>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <img src="images/security.jpg">
+                        <img src="images/security.jpg" alt="photo of the word security">
                         <div class="row">
                             <div class="col-lg-8 col-8">
                                 <h4>FEATURED PROJECT</h4>
@@ -162,7 +162,7 @@
             <h4>THE LAST</h4>
             <div class="row">
                 <div class="col-lg-3">
-                    <img src="images/mobile-phone.jpg">
+                    <img src="images/mobile-phone.jpg" alt="picture of mobile phone">
                 </div>
                 <div class="col-lg-9">
                     <h3>THE ADMIN BAR AND ABSOLUTE POSITIONING</h3>
@@ -170,7 +170,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img src="images/head.jpg">
+                    <img src="images/head.jpg" alt="blueprint of head">
                 </div>
                 <div class="col-lg-9">
                     <h3>NIBBLER AWESOME WEBSITE TESTING</h3>
@@ -178,7 +178,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3">
-                    <img src="images/google-search.jpg">
+                    <img src="images/google-search.jpg" alt="google and maginfying glass">
                 </div>
                 <div class="col-lg-9">
                     <h3>HOW TO GET GOOGLE TO LIKE YOU</h3>
